Fixed mobile about me page horizontal scrollbar

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -404,11 +404,12 @@ a {
     }
 
     .container {
-        width: 400px;
+        width: 350px;
     }
 
     .work-exp-box {
         margin: 0 auto;
+        width:300px;
     }
 
     .work-exp-box h2 {
